testing changes and year update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li class="nav-item"><a class="nav-item-child" href="#home" data-scroll="nav">Home</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#letter-from-the-managers" data-scroll="nav">Letter From The Managers</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#my-year-with-source" data-scroll="nav">Developing our Students</a></li>
-                        <li class="nav-item"><a class="nav-item-child" href="#client-impact-summary" data-scroll="nav">Overview of 2017-2018 Nonprofit Impact</a></li>
+                        <li class="nav-item"><a class="nav-item-child" href="#client-impact-summary" data-scroll="nav">Overview of 2018-2019 Nonprofit Partnerships</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#client-spotlight" data-scroll="nav">Client Spotlight: Pilgrim Place</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#task-forces" data-scroll="nav">Empowerment through Task Forces</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#source-academy" data-scroll="nav">Launching SOURCE Academy</a></li>
@@ -314,7 +314,7 @@
                 <div class="content-md container">
                     <!-- Heading v1 -->
                     <div class="heading-v1 text-center margin-b-80">
-                        <h2 class="heading-v1-title">SOURCE 2017-2018 Client Overview</h2>
+                        <h2 class="heading-v1-title">SOURCE 2018-2019 Nonprofit Partnerships</h2>
                         <p class="heading-v1-text">A Summary of SOURCE's Key Deliverables</p>
                     </div>
                     <!-- End Heading v1 -->
@@ -331,7 +331,7 @@
                                         <div role="tabpanel" class="show-pane tab-pane-left tab-pane col-md-6 col-sm-6" id="tab-v3-1">
                                             <div class="team-v2 wow fadeInLeft" data-wow-duration=".2" data-wow-delay=".2s">
                                                 <div class="team-v2-img-gradient">
-                                                    <img class="lazy img-responsive" src="assets/img/bg.png" data-src="assets/img/SOURCE/team/cfa-team.jpg" alt="">
+                                                    <img class="lazy img-responsive" src="assets/img/bg.png" data-src="assets/img/SOURCE/team/olivia.png" alt="">
                                                 </div>
                                                 <div class="team-v2-content">
                                                     <div class="team-v2-center-align">
