minor fixes to update

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                             </div>
                                             <div class="tab-pane-content">
                                                 <h2 class="font-size-22 color-base">Pomona Hope</h2>
-                                                <p><strong>Mission: </strong>We are a community-driven, faith-based non-profit whose local partnerships and holistic programs cultivate meaningful relationships and empower people of all backgrounds, particularly at-risk youth and their families, to work together toward personal and community transformation.</p><p><strong>The SOURCE team:</strong></p>
+                                                <p><strong>Mission: </strong>Pomona Hope is a community-driven, faith-based non-profit whose local partnerships and holistic programs cultivate meaningful relationships and empower people of all backgrounds, particularly at-risk youth and their families, to work together toward personal and community transformation.</p><p><strong>The SOURCE team:</strong></p>
                                                 <ul>
                                                     <li>Designed a live inventory system to better organize donations and report fair market values of donations</li>
                                                     <li>Organized an open house of nonprofits to discuss demands for a nonprofit network within the Greater Claremont area</li>
@@ -357,7 +357,7 @@
                                                     <div class="team-v2-content">
                                                         <div class="team-v2-center-align">
                                                         <h4 class="team-v2-member">Claremont Canopy</h4>
-                                                        <span class="team-v2-member-position">Front: <br>Olivia Ison ‘21<br>Middle: <br>Qinfei Zou '21, <br>Andrea Tattersfield<br>Back: <br>Liam Brennan-Burke '21, <br>Not Pictured: Megan Tankersley '20</span>
+                                                        <span class="team-v2-member-position">Front: <br>Olivia Ison ‘21<br>Middle: <br>Qinfei Zou '21, <br>Andrea Tattersfield '21<br>Back: <br>Liam Brennan-Burke '21, <br>Not Pictured: Megan Tankersley '20</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -382,13 +382,13 @@
                                                     <div class="team-v2-content">
                                                         <div class="team-v2-center-align">
                                                         <h4 class="team-v2-member">Trinity Youth Services</h4>
-                                                        <span class="team-v2-member-position">Front: <br>Josh Dorman ‘20, <br>Maxine Baghdadi '21', <br>Back: <br>Chloe Gubbay '22, <br>Jordan Venglass '21'</span>
+                                                        <span class="team-v2-member-position">Front: <br>Josh Dorman ‘20, <br>Maxine Baghdadi '21, <br>Back: <br>Chloe Gubbay '22, <br>Jordan Venglass '21</span>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="tab-pane-content">
                                                     <h2 class="font-size-22 color-base">Trinity Youth Services</h2>
-                                                    <p><strong>Mission:</strong> Trinity provides quality short-term residential programs, foster care and adoption services, and mental health programs to traumatized, abused, neglected and abandoned children.</p><p><strong>The SOURCE team:</strong></p>
+                                                    <p><strong>Mission:</strong> Trinity Youth Services provides quality short-term residential programs, foster care and adoption services, and mental health programs to traumatized, abused, neglected and abandoned children.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
                                                         <li>Interviewed stakeholders to develop a strategic plan</li>
                                                         <li>Created instructional manuals and financial outreach tracking tools for interns</li>
@@ -411,7 +411,7 @@
                                                 </div>
                                                 <div class="tab-pane-content">
                                                     <h2 class="font-size-22 color-base">Ability First</h2>
-                                                    <p><strong>Mission: </strong>AbilityFirst provides a variety of programs designed to help people with disabilities achieve their personal best throughout their lives. We do this by: creating targeted programming to help an individual successfully transition from childhood to adult life.</p><p><strong>The SOURCE team:</strong></p>
+                                                    <p><strong>Mission: </strong>Ability First provides a variety of programs designed to help people with disabilities achieve their personal best throughout their lives. We do this by: creating targeted programming to help an individual successfully transition from childhood to adult life.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
                                                         <li>Redesigned the website to be more modern and increase traffic</li>
                                                         <li>Researched and implemented a Customer Relationship Management software that best suited the nonprofit’s size, budget and needs</li>
@@ -429,7 +429,7 @@
                                                     <div class="team-v2-content">
                                                         <div class="team-v2-center-align">
                                                         <h4 class="team-v2-member">Claremont Homeless Advocacy Program</h4>
-                                                        <span class="team-v2-member-position">Brendan Suh '19', <br>Brooklyn Button '22', <br>Joshua Tatum '21', <br>Benjamin Wolters '21</span>
+                                                        <span class="team-v2-member-position">Brendan Suh '19, <br>Brooklyn Button '22, <br>Joshua Tatum '21, <br>Benjamin Wolters '21</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -456,7 +456,7 @@
                                                 </div>
                                                 <div class="tab-pane-content">
                                                     <h2 class="font-size-22 color-base">Pilgrim Place</h2>
-                                                    <p><strong>Mission:</strong>Fostering a vibrant and inclusive senior community committed to justice and peace.</p><p><strong>The SOURCE team:</strong></p>
+                                                    <p><strong>Mission:</strong>Pilgrim Place works towards fostering a vibrant and inclusive senior community committed to justice and peace.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
                                                         <li>Researched other community foundations to present a strategic plan recommendation</li>
                                                         <li>Worked with the nonprofit to form a “Why Pomona Community Foundation?” statement</li>
