more minor fixes

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                                     <div class="team-v2-content">
                                                         <div class="team-v2-center-align">
                                                         <h4 class="team-v2-member">Ability First</h4>
-                                                        <span class="team-v2-member-position">Front:<br>Harrison Schreiber '22, <br>Katrina Frei-Herrmann '22, <br>Middle: Janet Chen '21, <br>Bridget McCarthy '20, <br>Bruno Youn '19, <br>Back: <br>William Edwards '19</span>
+                                                        <span class="team-v2-member-position">Front:<br>Harrison Schreiber '22, <br>Katrina Frei-Herrmann '22, <br>Middle: <br>Janet Chen '21, <br>Bridget McCarthy '20, <br>Bruno Youn '19, <br>Back: <br>William Edwards '19</span>
                                                         </div>
                                                     </div>
                                                 </div>
