changed table of contents

--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
                     <ul class="header-section-scroll-menu margin-b-30">
                         <li class="nav-item"><a class="nav-item-child" href="#home" data-scroll="nav">Home</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#letter-from-the-managers" data-scroll="nav">Letter From The Managers</a></li>
-                        <li class="nav-item"><a class="nav-item-child" href="#my-year-with-source" data-scroll="nav">Developing our Students</a></li>
+                        <li class="nav-item"><a class="nav-item-child" href="#student-development" data-scroll="nav">Developing our Students</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#client-impact-summary" data-scroll="nav">Overview of 2018-2019 Nonprofit Partnerships</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#client-spotlight" data-scroll="nav">Client Spotlight: Pilgrim Place</a></li>
-                        <li class="nav-item"><a class="nav-item-child" href="#task-forces" data-scroll="nav">Empowerment through Task Forces</a></li>
-                        <li class="nav-item"><a class="nav-item-child" href="#source-academy" data-scroll="nav">Launching SOURCE Academy</a></li>
+                        <li class="nav-item"><a class="nav-item-child" href="#task-forces" data-scroll="nav">Empowering our Nonprofit Partners</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#fundraising" data-scroll="nav">Financial Highlights</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="#source-seniors" data-scroll="nav">Where Do Our Seniors Go?</a></li>
                         <li class="nav-item"><a class="nav-item-child" href="https://online.cmc.edu/SOURCEdonate" target="_blank" onClick="ga('send', 'event', 'Donate', 'Click', 'Donate-Menu');">Donate to SOURCE!</a></li>
@@ -258,7 +257,7 @@
         </section>
         <!-- END ABOUT -->
         <!--  MY YEAR -->
-        <section id="my-year-with-source">
+        <section id="student-development">
             <div class="content-md container-sm">
                 <!-- Heading v1 -->
                 <div class="heading-v1 text-center margin-b-80">
@@ -612,58 +611,6 @@
                     </div>
                 </section>
         <!-- END TASK FORCES -->
-        <!--  SOURCE ACADEMY -->
-        <section id="source-academy">
-            <div class="content-md container-sm separation">
-                <!-- Heading v1 -->
-                <div class="heading-v1 text-center margin-b-80">
-                    <h2 class="heading-v1-title">SOURCE Academy</h2>
-                    <p class="heading-v1-text">Reaching more nonprofits through helpful video content</p>
-                </div>
-                <!-- End Heading v1 -->
-
-                <div class="row">
-                    <div class="col-sm-6 sm-margin-b-30">
-                        <!-- Heading v1 -->
-                        <div class="heading-v1 margin-b-15">
-                            <h2 class="heading-v1-title">Launching SOURCE Academy</h2>
-                            <p class="heading-v1-subtitle">By Ben Wolters</p>
-                            <div id="source-academy-modal-time" class="read-time">
-                                <div>  
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Heading v1 -->
-                        <p>This year, SOURCE’s marketing team proudly launched SOURCE Academy: an innovative YouTube channel that uses animated videos to address the most common issues that nonprofits encounter.</p>
-                        <a id="source-academy-modal-button" href="#source-academy-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'source-academy');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
-                        
-                    </div>
-                    <div class="col-sm-6">
-                        <!-- End Team v2 -->
-                        <div class="row">
-                                <div class="overflow-h">
-                                    <!-- Team v2 -->
-                                    <div class="team-v2 wow fadeInLeft" data-wow-duration=".2" data-wow-delay=".2s">
-                                        <div class="team-v2-img-gradient">
-                                            <img class="lazy-no-transition img-responsive" src="assets/img/bg.png" data-src="assets/img/SOURCE/source-academy/header-photo.jpg" alt="">
-                                        </div>
-                                        <div class="team-v2-content">
-                                            <div class="team-v2-center-align">
-                                                <h4 class="team-v2-member"><a href="https://www.youtube.com/channel/UCOok6GkhZYpkLdVhnhb8BCw" target="_blank">SOURCE Academy</a></h4>
-                                                <span class="team-v2-member-position"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                        </div>
-                        <!--// end row -->
-                        <!-- End Team v2 -->
-                    </div>
-                </div>
-                <!--// end row -->
-            </div>
-        </section>
-        <!-- END CLIENT SPOTLIGHT -->
         <!-- FINANCIALS -->
         <section id="fundraising" class="bg-color-sky-light padding-b-50">
             <div class="banner-img-v3 bg-position-fixed margin-b-30">
