<mission, values, and quotes>

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <!-- Heading v1 -->
                     <div class="heading-v1 text-center margin-b-80">
                         <h2 class="heading-v1-title">Our Mission</h2>
-                        <p class="heading-v1-text">The mission of SOURCE is to help local nonprofits build capacity <br>and increase efficiency by providing professional consulting services <br>at zero cost to the organizations, while simultaneously <br>enhancing student development.</p>
+                        <p class="heading-v1-text"><br>Empower Nonprofits. Develop Students.<br></p>
                     </div>
                     <!-- End Heading v1 -->
 
