added empowering nonprofit articles

--- a/grace-article-modal/index.html
+++ b/grace-article-modal/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="modal-row extra-letter-margin">
-            {% include design-task-force-modal.html %}
+            {% include grace-article-modal.html %}
         </div>
     </div>
     {% include scripts.html %}
