--- a/olivia-article-modal/index.html
+++ b/olivia-article-modal/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="modal-row extra-letter-margin">
-            {% include nll-task-force-modal.html %}
+            {% include olivia-article-modal.html %}
         </div>
     </div>
     {% include scripts.html %}
