--- a/grace-article-modal/index.html
+++ b/grace-article-modal/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Task Forces</title>
+<title>Empowering our Nonprofit Partners</title>
 <meta name="keywords" content="SOURCE, Claremont Mckenna, Kravis Leadership, Nonprofit Consulting, Nonprofit" />
 <meta name="description" content="We are incredibly excited to present our 2018-2019 Year-End Report to you, our friends, partners, and supporters.">
 <meta name="author" content="SOURCE">
