--- a/leadership-modal/index.html
+++ b/leadership-modal/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Client Spotlight - CTEC</title>
+<title>Developing Our Students</title>
 <meta name="keywords" content="SOURCE, Claremont Mckenna, Kravis Leadership, Nonprofit Consulting, Nonprofit" />
 <meta name="description" content="We are incredibly excited to present our 2018-2019 Year-End Report to you, our friends, partners, and supporters.">
 <meta name="author" content="SOURCE">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="modal-row extra-letter-margin">
-            {% include client-spotlight-modal.html %}
+            {% include leadership-modal.html %}
         </div>
     </div>
     {% include scripts.html %}
