student development modals work

--- a/nll-task-force-modal/index.html
+++ b/nll-task-force-modal/index.html
@@ -6,9 +6,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>My Year With SOURCE</title>
+<title>Task Forces</title>
 <meta name="keywords" content="SOURCE, Claremont Mckenna, Kravis Leadership, Nonprofit Consulting, Nonprofit" />
-<meta name="description" content="We are incredibly excited to present our 2018-2019 Year-End Report to you, our friends, partners, and supporters.">
+<meta name="description" content="We are incredibly excited to present our 2017-2018 Year-End Report to you, our friends, partners, and supporters.">
 <meta name="author" content="SOURCE">
 
 <!-- Mobile Metas -->
@@ -35,10 +35,9 @@
             </div>
         </div>
         <div class="modal-row extra-letter-margin">
-            {% include my-year-with-source-modal.html %}
+            {% include nll-task-force-modal.html %}
         </div>
     </div>
     {% include scripts.html %}
 </body>
-
 </html>
