--- a/ideajam-modal/index.html
+++ b/ideajam-modal/index.html
@@ -6,9 +6,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>SOURCE Academy</title>
+<title>Empowering our Nonprofit Partners</title>
 <meta name="keywords" content="SOURCE, Claremont Mckenna, Kravis Leadership, Nonprofit Consulting, Nonprofit" />
-<meta name="description" content="We are incredibly excited to present our 2015-2016 Year-End Report to you, our friends, partners, and supporters.">
+<meta name="description" content="We are incredibly excited to present our 2018-2019 Year-End Report to you, our friends, partners, and supporters.">
 <meta name="author" content="SOURCE">
 
 <!-- Mobile Metas -->
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="modal-row extra-letter-margin">
-            {% include source-academy-modal.html %}
+            {% include ideajam-modal.html %}
         </div>
     </div>
     {% include scripts.html %}
